--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,9 +10,8 @@ skip_commits:
   # Regex for matching commit message
   message: /\(doc\).*/
 
-#on_finish:
-#  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
-#
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))#
 
 #---------------------------------#
 # Build cache                     #
